# vortex-python

./: package.json  pyproject.toml
tests/engines/: test_api.py  test_blob_storage.py  test_delta.py  test_email.py  test_engine.py  test_eventhub.py  test_ftp.py  test_msqlserver.py  test_postgres.py  test_snowflake.py
tests/orchestration/: test_manifest_params.py
tests/qa/: test_qa_step.py
tests/streaming/: test_strategies_adls_to_adls.py  test_strategies_adls_to_delta.py  test_strategies_delta_to_adls.py  test_strategies_delta_to_delta.py  test_strategies_delta_to_eventhub.py  test_strategies_delta_to_postgres.py  test_strategies_eventhub_kafka_to_delta.py  test_strategies_test_eventhub_to_delta.py
vortex/datamodels/: cluster.py  manifest.py
vortex/datamodels/engine/: __init__.py
vortex/datamodels/executor/: databricks.py  kubernetes.py
vortex/datamodels/orchestrator/: airflow.py
vortex/datamodels/pipeline/: __init__.py  airflow.py  dbt.py  etl.py  manifest.py  qa.py  template.py  workflows.py
vortex/engine/: __init__.py  api.py  blob_storage.py  delta_feature_store.py  ftp.py  msqlserver.py  trino.py
vortex/executor/: __init__.py
vortex/flows/: __init__.py
vortex/flows/batch/: builder.py  director.py  flow.py
vortex/flows/batch/engine/: adls.py  api.py  delta.py  email.py  eventhub.py  postgres.py  snowflake.py
vortex/flows/processing/: __init__.py
vortex/flows/qa/: __init__.py  profiling.py
vortex/flows/session/: databricks.py  local.py
vortex/flows/streaming/: flow.py  selector.py  strategies.py
vortex/flows/streaming/engine/: adls.py  delta.py  eventhub.py  ftp.py  postgres.py  snowflake.py
vortex/io/: requests.py
vortex/orchestrator/: airflow.py  databricks.py  parser.py
vortex/utils/: __init__.py  dataframe_utils.py  dbutils.py  deprecation.py  files.py  runtime.py  udfs.py
